--- a/css/main.css
+++ b/css/main.css
@@ -56,8 +56,8 @@ text-align:center;
 
 
 #footer{
-	background-color: rgba(96, 129, 211, 0.9);
-	color: white;
+	background-color: #e0e5e6;
+	color: #deefed;
 	font: 600 12px/14px 'Open Sans',sans-serif;
 	padding: 20px;
 	padding-top: 40px;
@@ -74,7 +74,7 @@ body{
 .clearfix:after,.clearfix:before{content:'';display:table}
 .clearfix:after{clear:both;display:block}
 a{color:inherit;text-decoration:none}
-a:hover{color: #F2674A;text-decoration: none;}
+a:hover{color: #002357;text-decoration: none;}
 
 input[type=text], input[type=password]{
 	width: 100%;
